--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -16,7 +16,7 @@
   transition: 0.5s ease;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   .profile__add-button {
     max-width: 282px;
     width: 282px;
