--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -9,7 +9,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   .profile__avatar {
     width: 120px;
   }
