--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -32,7 +32,7 @@
   transform: scale(1.1);
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
