--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,6 @@
 .profile__info {
   margin: 0 45px 0 30px;
+  max-width: 350px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(294px, 1fr));
   grid-column-gap: 18px;
@@ -12,33 +13,19 @@
 
 @media screen and (max-width: 790px) {
   .profile__info {
+    max-width: 230px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 }
 
-@media screen and (max-width: 690px) {
+@media screen and (max-width: 650px) {
   .profile__info {
-    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-    margin: 0 30px 0 15px;
-    grid-column-gap: 10px;
-    grid-row-gap: 12px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .profile__info {
-    margin-right: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .profile__info {
-    width: 282px;
+    max-width: 282px;
     box-sizing: border-box;
-    margin: 26px 0 36px;
-    padding-left: 46px;
-    grid-template-columns: repeat(auto-fit, 189px);
-    grid-row-gap: 14px;
+    margin: 26px 30px 36px 0;
+    padding-left: 56px;
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+    grid-row-gap: 6px;
+    grid-column-gap: 10px;
   }
 }
