--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -25,14 +25,9 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .profile {
     max-width: calc(100% - (19px * 2));
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .profile {
     padding: 42px 0 36px;
     flex-direction: column;
   }
